infra/k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: stock-dev
  labels:
    app.kubernetes.io/part-of: stock-intelligence
    environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: stock-staging
  labels:
    app.kubernetes.io/part-of: stock-intelligence
    environment: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: stock-prod
  labels:
    app.kubernetes.io/part-of: stock-intelligence
    environment: production
